--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,5 +1,13 @@
-Privacy Policy and Terms of Use
+##Privacy Policy and Terms of Use
 
 1 - Calendar entries (privacy) - By default, My M-Cycle keeps all your entries on your device. We do not store your entries on any external server.
 2 - Predictions - Every human body is different, there is no guarantee of any kind that the predictions are right.
 3 - Usage - Please select your menstruation days every month.
+
+
+## Welcome to Support page for myM-Cycle app
+
+
+### Support or Contact
+
+Having trouble with app? Please contact as on email jasmina.zoran@icloud.com.
